// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HL7v2 parser > does not run preprocessors when option is an empty array 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 4,
                          "line": 1,
                          "offset": 3,
                        },
                        "start": {
                          "column": 1,
                          "line": 1,
                          "offset": 0,
                        },
                      },
                      "type": "subcomponent",
                      "value": "PID",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 4,
                      "line": 1,
                      "offset": 3,
                    },
                    "start": {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 4,
                  "line": 1,
                  "offset": 3,
                },
                "start": {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 10,
                          "line": 1,
                          "offset": 9,
                        },
                        "start": {
                          "column": 5,
                          "line": 1,
                          "offset": 4,
                        },
                      },
                      "type": "subcomponent",
                      "value": "1
OBX",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 10,
                      "line": 1,
                      "offset": 9,
                    },
                    "start": {
                      "column": 5,
                      "line": 1,
                      "offset": 4,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 10,
                  "line": 1,
                  "offset": 9,
                },
                "start": {
                  "column": 5,
                  "line": 1,
                  "offset": 4,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 12,
                          "line": 1,
                          "offset": 11,
                        },
                        "start": {
                          "column": 11,
                          "line": 1,
                          "offset": 10,
                        },
                      },
                      "type": "subcomponent",
                      "value": "2",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 12,
                      "line": 1,
                      "offset": 11,
                    },
                    "start": {
                      "column": 11,
                      "line": 1,
                      "offset": 10,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 12,
                  "line": 1,
                  "offset": 11,
                },
                "start": {
                  "column": 11,
                  "line": 1,
                  "offset": 10,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "start": {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
          },
          "type": "field",
        },
      ],
      "position": {
        "end": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "segment",
    },
  ],
  "type": "root",
}
`;

exports[`HL7v2 parser > handles leading double field delimiters as two empty leading fields 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 1,
                          "line": 1,
                          "offset": 0,
                        },
                        "start": {
                          "column": 1,
                          "line": 1,
                          "offset": 0,
                        },
                      },
                      "type": "subcomponent",
                      "value": "",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                    "start": {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
                "start": {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "position": {
                    "end": {
                      "column": 2,
                      "line": 1,
                      "offset": 1,
                    },
                    "start": {
                      "column": 2,
                      "line": 1,
                      "offset": 1,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
                "start": {
                  "column": 2,
                  "line": 1,
                  "offset": 1,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 2,
              "line": 1,
              "offset": 1,
            },
            "start": {
              "column": 2,
              "line": 1,
              "offset": 1,
            },
          },
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 4,
                          "line": 1,
                          "offset": 3,
                        },
                        "start": {
                          "column": 3,
                          "line": 1,
                          "offset": 2,
                        },
                      },
                      "type": "subcomponent",
                      "value": "A",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 4,
                      "line": 1,
                      "offset": 3,
                    },
                    "start": {
                      "column": 3,
                      "line": 1,
                      "offset": 2,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 4,
                  "line": 1,
                  "offset": 3,
                },
                "start": {
                  "column": 3,
                  "line": 1,
                  "offset": 2,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": {
              "column": 3,
              "line": 1,
              "offset": 2,
            },
          },
          "type": "field",
        },
      ],
      "position": {
        "end": {
          "column": 4,
          "line": 1,
          "offset": 3,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "segment",
    },
  ],
  "type": "root",
}
`;

exports[`HL7v2 parser > parses a segment ending with a field delimiter 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 4,
                          "line": 1,
                          "offset": 3,
                        },
                        "start": {
                          "column": 1,
                          "line": 1,
                          "offset": 0,
                        },
                      },
                      "type": "subcomponent",
                      "value": "PID",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 4,
                      "line": 1,
                      "offset": 3,
                    },
                    "start": {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 4,
                  "line": 1,
                  "offset": 3,
                },
                "start": {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 6,
                          "line": 1,
                          "offset": 5,
                        },
                        "start": {
                          "column": 5,
                          "line": 1,
                          "offset": 4,
                        },
                      },
                      "type": "subcomponent",
                      "value": "1",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 6,
                      "line": 1,
                      "offset": 5,
                    },
                    "start": {
                      "column": 5,
                      "line": 1,
                      "offset": 4,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 6,
                  "line": 1,
                  "offset": 5,
                },
                "start": {
                  "column": 5,
                  "line": 1,
                  "offset": 4,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "type": "field",
        },
      ],
      "position": {
        "end": {
          "column": 7,
          "line": 1,
          "offset": 6,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "segment",
    },
  ],
  "type": "root",
}
`;

exports[`HL7v2 parser > parses a segment ending with multiple field delimiters 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 4,
                          "line": 1,
                          "offset": 3,
                        },
                        "start": {
                          "column": 1,
                          "line": 1,
                          "offset": 0,
                        },
                      },
                      "type": "subcomponent",
                      "value": "PID",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 4,
                      "line": 1,
                      "offset": 3,
                    },
                    "start": {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 4,
                  "line": 1,
                  "offset": 3,
                },
                "start": {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 6,
                          "line": 1,
                          "offset": 5,
                        },
                        "start": {
                          "column": 5,
                          "line": 1,
                          "offset": 4,
                        },
                      },
                      "type": "subcomponent",
                      "value": "1",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 6,
                      "line": 1,
                      "offset": 5,
                    },
                    "start": {
                      "column": 5,
                      "line": 1,
                      "offset": 4,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 6,
                  "line": 1,
                  "offset": 5,
                },
                "start": {
                  "column": 5,
                  "line": 1,
                  "offset": 4,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "position": {
                    "end": {
                      "column": 7,
                      "line": 1,
                      "offset": 6,
                    },
                    "start": {
                      "column": 7,
                      "line": 1,
                      "offset": 6,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 7,
                  "line": 1,
                  "offset": 6,
                },
                "start": {
                  "column": 7,
                  "line": 1,
                  "offset": 6,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
            "start": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
          },
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "position": {
                    "end": {
                      "column": 8,
                      "line": 1,
                      "offset": 7,
                    },
                    "start": {
                      "column": 8,
                      "line": 1,
                      "offset": 7,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 8,
                  "line": 1,
                  "offset": 7,
                },
                "start": {
                  "column": 8,
                  "line": 1,
                  "offset": 7,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
            "start": {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
          },
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "position": {
                    "end": {
                      "column": 9,
                      "line": 1,
                      "offset": 8,
                    },
                    "start": {
                      "column": 9,
                      "line": 1,
                      "offset": 8,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 9,
                  "line": 1,
                  "offset": 8,
                },
                "start": {
                  "column": 9,
                  "line": 1,
                  "offset": 8,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
            "start": {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
          },
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "position": {
                    "end": {
                      "column": 10,
                      "line": 1,
                      "offset": 9,
                    },
                    "start": {
                      "column": 10,
                      "line": 1,
                      "offset": 9,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 10,
                  "line": 1,
                  "offset": 9,
                },
                "start": {
                  "column": 10,
                  "line": 1,
                  "offset": 9,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "start": {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
          },
          "type": "field",
        },
      ],
      "position": {
        "end": {
          "column": 11,
          "line": 1,
          "offset": 10,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "segment",
    },
  ],
  "type": "root",
}
`;

exports[`HL7v2 parser > parses a segment ending with multiple field delimiters and segment carriage return 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 4,
                          "line": 1,
                          "offset": 3,
                        },
                        "start": {
                          "column": 1,
                          "line": 1,
                          "offset": 0,
                        },
                      },
                      "type": "subcomponent",
                      "value": "PID",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 4,
                      "line": 1,
                      "offset": 3,
                    },
                    "start": {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 4,
                  "line": 1,
                  "offset": 3,
                },
                "start": {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 6,
                          "line": 1,
                          "offset": 5,
                        },
                        "start": {
                          "column": 5,
                          "line": 1,
                          "offset": 4,
                        },
                      },
                      "type": "subcomponent",
                      "value": "1",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 6,
                      "line": 1,
                      "offset": 5,
                    },
                    "start": {
                      "column": 5,
                      "line": 1,
                      "offset": 4,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 6,
                  "line": 1,
                  "offset": 5,
                },
                "start": {
                  "column": 5,
                  "line": 1,
                  "offset": 4,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "position": {
                    "end": {
                      "column": 7,
                      "line": 1,
                      "offset": 6,
                    },
                    "start": {
                      "column": 7,
                      "line": 1,
                      "offset": 6,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 7,
                  "line": 1,
                  "offset": 6,
                },
                "start": {
                  "column": 7,
                  "line": 1,
                  "offset": 6,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
            "start": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
          },
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "position": {
                    "end": {
                      "column": 8,
                      "line": 1,
                      "offset": 7,
                    },
                    "start": {
                      "column": 8,
                      "line": 1,
                      "offset": 7,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 8,
                  "line": 1,
                  "offset": 7,
                },
                "start": {
                  "column": 8,
                  "line": 1,
                  "offset": 7,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
            "start": {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
          },
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "position": {
                    "end": {
                      "column": 9,
                      "line": 1,
                      "offset": 8,
                    },
                    "start": {
                      "column": 9,
                      "line": 1,
                      "offset": 8,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 9,
                  "line": 1,
                  "offset": 8,
                },
                "start": {
                  "column": 9,
                  "line": 1,
                  "offset": 8,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
            "start": {
              "column": 9,
              "line": 1,
              "offset": 8,
            },
          },
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "position": {
                    "end": {
                      "column": 10,
                      "line": 1,
                      "offset": 9,
                    },
                    "start": {
                      "column": 10,
                      "line": 1,
                      "offset": 9,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 10,
                  "line": 1,
                  "offset": 9,
                },
                "start": {
                  "column": 10,
                  "line": 1,
                  "offset": 9,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "start": {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
          },
          "type": "field",
        },
      ],
      "position": {
        "end": {
          "column": 11,
          "line": 1,
          "offset": 10,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "segment",
    },
  ],
  "type": "root",
}
`;

exports[`HL7v2 parser > parses a segment ending with two field delimiters and preserves the last empty field 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 4,
                          "line": 1,
                          "offset": 3,
                        },
                        "start": {
                          "column": 1,
                          "line": 1,
                          "offset": 0,
                        },
                      },
                      "type": "subcomponent",
                      "value": "PID",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 4,
                      "line": 1,
                      "offset": 3,
                    },
                    "start": {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 4,
                  "line": 1,
                  "offset": 3,
                },
                "start": {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 6,
                          "line": 1,
                          "offset": 5,
                        },
                        "start": {
                          "column": 5,
                          "line": 1,
                          "offset": 4,
                        },
                      },
                      "type": "subcomponent",
                      "value": "1",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 6,
                      "line": 1,
                      "offset": 5,
                    },
                    "start": {
                      "column": 5,
                      "line": 1,
                      "offset": 4,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 6,
                  "line": 1,
                  "offset": 5,
                },
                "start": {
                  "column": 5,
                  "line": 1,
                  "offset": 4,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [],
                  "position": {
                    "end": {
                      "column": 7,
                      "line": 1,
                      "offset": 6,
                    },
                    "start": {
                      "column": 7,
                      "line": 1,
                      "offset": 6,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 7,
                  "line": 1,
                  "offset": 6,
                },
                "start": {
                  "column": 7,
                  "line": 1,
                  "offset": 6,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
            "start": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
          },
          "type": "field",
        },
      ],
      "position": {
        "end": {
          "column": 8,
          "line": 1,
          "offset": 7,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "segment",
    },
  ],
  "type": "root",
}
`;

exports[`HL7v2 parser > parses a single segment with two fields 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 4,
                          "line": 1,
                          "offset": 3,
                        },
                        "start": {
                          "column": 1,
                          "line": 1,
                          "offset": 0,
                        },
                      },
                      "type": "subcomponent",
                      "value": "PID",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 4,
                      "line": 1,
                      "offset": 3,
                    },
                    "start": {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 4,
                  "line": 1,
                  "offset": 3,
                },
                "start": {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 6,
                          "line": 1,
                          "offset": 5,
                        },
                        "start": {
                          "column": 5,
                          "line": 1,
                          "offset": 4,
                        },
                      },
                      "type": "subcomponent",
                      "value": "1",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 6,
                      "line": 1,
                      "offset": 5,
                    },
                    "start": {
                      "column": 5,
                      "line": 1,
                      "offset": 4,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 6,
                  "line": 1,
                  "offset": 5,
                },
                "start": {
                  "column": 5,
                  "line": 1,
                  "offset": 4,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "type": "field",
        },
      ],
      "position": {
        "end": {
          "column": 6,
          "line": 1,
          "offset": 5,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "segment",
    },
  ],
  "type": "root",
}
`;

exports[`HL7v2 parser > preserves trailing component delimiter by creating an empty component 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 4,
                          "line": 1,
                          "offset": 3,
                        },
                        "start": {
                          "column": 1,
                          "line": 1,
                          "offset": 0,
                        },
                      },
                      "type": "subcomponent",
                      "value": "PID",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 4,
                      "line": 1,
                      "offset": 3,
                    },
                    "start": {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 4,
                  "line": 1,
                  "offset": 3,
                },
                "start": {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 6,
                          "line": 1,
                          "offset": 5,
                        },
                        "start": {
                          "column": 5,
                          "line": 1,
                          "offset": 4,
                        },
                      },
                      "type": "subcomponent",
                      "value": "A",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 6,
                      "line": 1,
                      "offset": 5,
                    },
                    "start": {
                      "column": 5,
                      "line": 1,
                      "offset": 4,
                    },
                  },
                  "type": "component",
                },
                {
                  "children": [],
                  "position": {
                    "end": {
                      "column": 7,
                      "line": 1,
                      "offset": 6,
                    },
                    "start": {
                      "column": 7,
                      "line": 1,
                      "offset": 6,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 7,
                  "line": 1,
                  "offset": 6,
                },
                "start": {
                  "column": 5,
                  "line": 1,
                  "offset": 4,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "type": "field",
        },
      ],
      "position": {
        "end": {
          "column": 7,
          "line": 1,
          "offset": 6,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "segment",
    },
  ],
  "type": "root",
}
`;

exports[`HL7v2 parser > runs custom preprocessors 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 4,
                          "line": 1,
                          "offset": 3,
                        },
                        "start": {
                          "column": 1,
                          "line": 1,
                          "offset": 0,
                        },
                      },
                      "type": "subcomponent",
                      "value": "PID",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 4,
                      "line": 1,
                      "offset": 3,
                    },
                    "start": {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 4,
                  "line": 1,
                  "offset": 3,
                },
                "start": {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 6,
                          "line": 1,
                          "offset": 5,
                        },
                        "start": {
                          "column": 5,
                          "line": 1,
                          "offset": 4,
                        },
                      },
                      "type": "subcomponent",
                      "value": "1",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 6,
                      "line": 1,
                      "offset": 5,
                    },
                    "start": {
                      "column": 5,
                      "line": 1,
                      "offset": 4,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 6,
                  "line": 1,
                  "offset": 5,
                },
                "start": {
                  "column": 5,
                  "line": 1,
                  "offset": 4,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 10,
                          "line": 1,
                          "offset": 9,
                        },
                        "start": {
                          "column": 7,
                          "line": 1,
                          "offset": 6,
                        },
                      },
                      "type": "subcomponent",
                      "value": "DEF",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 10,
                      "line": 1,
                      "offset": 9,
                    },
                    "start": {
                      "column": 7,
                      "line": 1,
                      "offset": 6,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 10,
                  "line": 1,
                  "offset": 9,
                },
                "start": {
                  "column": 7,
                  "line": 1,
                  "offset": 6,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "start": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
          },
          "type": "field",
        },
      ],
      "position": {
        "end": {
          "column": 11,
          "line": 1,
          "offset": 10,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "segment",
    },
  ],
  "type": "root",
}
`;

exports[`HL7v2 parser > runs default preprocessors 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 4,
                          "line": 1,
                          "offset": 3,
                        },
                        "start": {
                          "column": 1,
                          "line": 1,
                          "offset": 0,
                        },
                      },
                      "type": "subcomponent",
                      "value": "PID",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 4,
                      "line": 1,
                      "offset": 3,
                    },
                    "start": {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 4,
                  "line": 1,
                  "offset": 3,
                },
                "start": {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 6,
                          "line": 1,
                          "offset": 5,
                        },
                        "start": {
                          "column": 5,
                          "line": 1,
                          "offset": 4,
                        },
                      },
                      "type": "subcomponent",
                      "value": "1",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 6,
                      "line": 1,
                      "offset": 5,
                    },
                    "start": {
                      "column": 5,
                      "line": 1,
                      "offset": 4,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 6,
                  "line": 1,
                  "offset": 5,
                },
                "start": {
                  "column": 5,
                  "line": 1,
                  "offset": 4,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 10,
                          "line": 1,
                          "offset": 9,
                        },
                        "start": {
                          "column": 7,
                          "line": 1,
                          "offset": 6,
                        },
                      },
                      "type": "subcomponent",
                      "value": "ABC",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 10,
                      "line": 1,
                      "offset": 9,
                    },
                    "start": {
                      "column": 7,
                      "line": 1,
                      "offset": 6,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 10,
                  "line": 1,
                  "offset": 9,
                },
                "start": {
                  "column": 7,
                  "line": 1,
                  "offset": 6,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "start": {
              "column": 7,
              "line": 1,
              "offset": 6,
            },
          },
          "type": "field",
        },
      ],
      "position": {
        "end": {
          "column": 11,
          "line": 1,
          "offset": 10,
        },
        "start": {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "segment",
    },
    {
      "children": [
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 4,
                          "line": 2,
                          "offset": 14,
                        },
                        "start": {
                          "column": 1,
                          "line": 2,
                          "offset": 11,
                        },
                      },
                      "type": "subcomponent",
                      "value": "NK1",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 4,
                      "line": 2,
                      "offset": 14,
                    },
                    "start": {
                      "column": 1,
                      "line": 2,
                      "offset": 11,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 4,
                  "line": 2,
                  "offset": 14,
                },
                "start": {
                  "column": 1,
                  "line": 2,
                  "offset": 11,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 4,
              "line": 2,
              "offset": 14,
            },
            "start": {
              "column": 1,
              "line": 2,
              "offset": 11,
            },
          },
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 6,
                          "line": 2,
                          "offset": 16,
                        },
                        "start": {
                          "column": 5,
                          "line": 2,
                          "offset": 15,
                        },
                      },
                      "type": "subcomponent",
                      "value": "2",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 6,
                      "line": 2,
                      "offset": 16,
                    },
                    "start": {
                      "column": 5,
                      "line": 2,
                      "offset": 15,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 6,
                  "line": 2,
                  "offset": 16,
                },
                "start": {
                  "column": 5,
                  "line": 2,
                  "offset": 15,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 6,
              "line": 2,
              "offset": 16,
            },
            "start": {
              "column": 5,
              "line": 2,
              "offset": 15,
            },
          },
          "type": "field",
        },
        {
          "children": [
            {
              "children": [
                {
                  "children": [
                    {
                      "position": {
                        "end": {
                          "column": 10,
                          "line": 2,
                          "offset": 20,
                        },
                        "start": {
                          "column": 7,
                          "line": 2,
                          "offset": 17,
                        },
                      },
                      "type": "subcomponent",
                      "value": "ABC",
                    },
                  ],
                  "position": {
                    "end": {
                      "column": 10,
                      "line": 2,
                      "offset": 20,
                    },
                    "start": {
                      "column": 7,
                      "line": 2,
                      "offset": 17,
                    },
                  },
                  "type": "component",
                },
              ],
              "position": {
                "end": {
                  "column": 10,
                  "line": 2,
                  "offset": 20,
                },
                "start": {
                  "column": 7,
                  "line": 2,
                  "offset": 17,
                },
              },
              "type": "field-repetition",
            },
          ],
          "position": {
            "end": {
              "column": 10,
              "line": 2,
              "offset": 20,
            },
            "start": {
              "column": 7,
              "line": 2,
              "offset": 17,
            },
          },
          "type": "field",
        },
      ],
      "position": {
        "end": {
          "column": 11,
          "line": 2,
          "offset": 21,
        },
        "start": {
          "column": 1,
          "line": 2,
          "offset": 11,
        },
      },
      "type": "segment",
    },
  ],
  "type": "root",
}
`;
